Flicker fix

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -23,9 +23,14 @@
 /* =0. Fonts
 --------------------------------------------------------------------------------------------------------*/
 @font-face {
-		font-family: firakatiFont;
-		src: url('fonts/Lato-Thin.woff');
-	}
+	font-family: firakatiFont;
+    src: url('fonts/Lato-Thin.woff');
+}
+@font-face {
+	font-family: lato;
+    src: url('fonts/Lato-Light.woff');
+}
+  
 /*
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
@@ -492,17 +497,20 @@ img.dark {background:#000; opacity:0.5 }
 }
 
 #refresh {
-	  width: 10%;
-	  height: 30px;
-      border-width: 0px;
-      color: #252525;
-      background-color: #33b5e5;
-	  margin-top: 10px;
-	  margin-bottom: 10px;
+    width: 10%;
+	height: 30px;
+    border-width: 0px;
+    display: inline-block;
+    font-family: lato;
+    font-size: 20px;
+    color: #252525;
+    background-color: #33b5e5;
+    border-radius: 4px;
+	margin-top: 10px;
+	margin-bottom: 10px;
 }
 #project {
-	  width: 10%;
-	  height: 50px;
+	  padding: 0.7rem 1.5rem;
       border-width: 0px;
       color: #252525;
       background-color: #33b5e5;
@@ -512,7 +520,8 @@ img.dark {background:#000; opacity:0.5 }
 }
 
 #refresh:hover {
-	background-color: rgba(255, 255, 255, 0.15);
+	background-color: white;
+    cursor: pointer;
 }
 
 #serverlist
@@ -550,15 +559,16 @@ td, th {
 
 .btn {
     display: inline-block;
-    font-size: 20px;
+    font-family: lato;
+    font-size: 18px;
     padding: 0.7rem 1.5rem;
     color: #252525;
-    text-decoration: none;
     background-color: #33b5e5;
-    border-radius: 6px;
-    box-shadow: inset 0 1px 0 rgba(255,255,255,.1);
+    border-radius: 4px;
 }
-.btn:hover 
+
+.btn:hover
 {
+    cursor: pointer;
     background-color: #fff;
 }
